# backend-projects

./: .gitignore  README.md
expense-tracker/: README.md
github-user-activity/: .gitignore  README.md
github-user-activity/Javascript/: README.md  package-lock.json  package.json  tsconfig.json
github-user-activity/Javascript/src/: api.ts  index.ts  parser.ts
github-user-activity/Python/: README.md  main.py
github-user-activity/Python/github_activity/: api.py  cli.py  parser.py
task-tracker/: README.md
task-tracker/Python/: .gitignore  README.md  app.py  pyproject.toml  storage.py  tasks.py  utils.py
task-tracker/Python/tasktracker/: tasks.py
task-tracker/Python/tasktracker_src/: app.py  storage.py  tasks.py  utils.py
